# editer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: alloc.rs  arrayvec.rs  lib.rs  slot.rs  smallvec.rs
src/integrations/: arrayvec.rs  mod.rs  smallvec.rs
src/integrations/alloc/: vec.rs  vec_deque.rs
src/integrations/tinyvec/: arrayvec.rs  mod.rs  tinyvec.rs
