[package]
name = "editer"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", optional = true, default-features = false }
smallvec = { version = "1.10", optional = true }
tap = "1.0"

[dev-dependencies]
editer = { path = ".", features = ["arrayvec", "smallvec"] }
arrayvec = "0.7"
smallvec = "1.10"

[features]
default = ["std"]
alloc = []
std = ["alloc"]
