[package]
name = "editer"
description = "In-place, simultaneous iteration and mutation of collections"
version = "0.1.0"
rust-version = "1.57"
edition = "2021"
authors = ["George Claghorn <georgeclaghorn@gmail.com>"]
repository = "https://github.com/georgeclaghorn/editer"
homepage = "https://github.com/georgeclaghorn/editer"
documentation = "https://docs.rs/editer"
license = "MIT"
readme = "README.md"
categories = ["rust-patterns", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = { version = "0.7", optional = true, default-features = false }
smallvec = { version = "1.10", optional = true }
tinyvec = { version = "1.6", optional = true, features = ["rustc_1_55"] }

[dev-dependencies]
editer = { path = ".", features = ["arrayvec", "smallvec", "tinyvec"] }
arrayvec = "0.7"
smallvec = "1.10"
tinyvec = { version = "1.6", features = ["alloc"] }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
